# woff2-rs

./: Cargo.toml  readme.md
examples/: decoder.rs
src/: buffer_util.rs  checksum.rs  decode.rs  lib.rs  magic_numbers.rs  ttf_header.rs
src/glyf_decoder/: mod.rs  x_y_triplet.rs
src/test_resources/: mod.rs
src/woff2/: collection_directory.rs  header.rs  mod.rs  table_directory.rs
